--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.dark {
+  @apply bg-gray-950 text-zinc-50
+}
+
+.light {
+  @apply bg-white text-gray-950
+}
