--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,14 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Bold";   /*Can be any text*/
+  src: local("CalSans"),
+    url("./fonts/CalSans-SemiBold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Regular";   /*Can be any text*/
+  src: local("Matter"),
+    url("./fonts/Matter-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Medium";   /*Can be any text*/
+  src: local("Matter"),
+    url("./fonts/Matter-Medium.ttf") format("truetype");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Bold";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.medium-font{
+  font-family: "Medium";
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
